fixes paragraph tag on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -23,6 +23,7 @@
 	p
 	{
 		width: auto;
+		margin: auto;
 	}
 
 	.container
